--- a/app/package.json
+++ b/app/package.json
@@ -6,8 +6,10 @@
     "drizzle": "^1.2.4",
     "drizzle-react": "^1.2.0",
     "drizzle-react-components": "^1.2.1",
+    "ethers": "^4.0.33",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
