--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "react-toastify": "^5.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
